web/components/Board.module.css
.board {
    align-self: center;
}

.arrow {
    color: royalblue;
    font-size: 2rem;
    margin-top: 0;
    margin-left: 0;
    margin-right: 0;
    /* Fix vertical centering */
    margin-bottom: 0.5rem;
}

.start {
    color: royalblue;
    text-transform: uppercase;
    font-size: 1.2rem;
}

.outer {
    display: flex;
    align-items: center;
    justify-content: center;
    margin: auto;
}

